--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>InnoVision</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.5.0/firebase-app.js"></script>
@@ -17,73 +17,137 @@
     <script defer src="/__/firebase/8.5.0/firebase-analytics.js"></script>
     <script defer src="/__/firebase/8.5.0/firebase-remote-config.js"></script>
     <script defer src="/__/firebase/8.5.0/firebase-performance.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat' >
+    <link rel='icon' href='Images/logoBlancAvecFond.png'>
   </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+  <body >
+<!-- Barre menu -->
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
+<div id="barreMenu" >
+  <img src="Images/logoBleu.png" alt="Logo InnoVision" id="logo" href="index.html">
+  <a href="index.html" class="name"  >InnoVision</a>
+  
+  <div class="links">
+  <a href="#about" >A propos</a>
+  <a href="#projet" >Nos projets</a>
+  <a href="#contact" >Contactez Nous</a>
+</div>
+</div>
+
+<!-- Accueil -->
+<div id="accueil" >
+<img src="images/accueil.png" alt="Accueil" id="acc-img">
+</div>
+
+
+<!--a propos -->
+<div id="about">
+  <div class="talk">
+    <h1>Qui sommes <span style="color: #123f89;">Nous</span>?</h1>
+    <p>Bla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablabla</p>
+  </div>
+  <img src="Images/aPropos.png" alt="A propos" class="aPropos">
+</div>
+
+<!--nos projets -->
+<div id="projet">
+  <img src="Images/nosProjets.png" alt="Nos projets" class="pro">
+  <h1>Nos Projets</h1>
+  <div class="listProjets">
+      <div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center; color: #123f89;">Projet 1</span> 
+          <br/><br/>date1-date2</div>
+      </div>
+      <div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 2</span> 
+          <br/><br/>date1-date2</div>
+      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 3</span> 
+          <br/><br/>date1-date2</div>
+      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 4</span> 
+          <br/><br/>date1-date2</div>
+      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 5</span> 
+          <br/><br/>date1-date2</div>
+      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 6</span> 
+          <br/><br/>date1-date2</div>
+      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 7</span> 
+          <br/><br/>date1-date2</div>
+      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 8</span> 
+          <br/><br/>date1-date2</div>
+      </div>
+  </div>
+</div>
+
+
+<!-- Contactez nous -->
+<div id="contact">
+<h1>Contactez Nous</h1>
+<div class="container">
+  <form enctype="multipart/form-data"></form>
+    <input type="text" id="yname" name="name" placeholder="Votre nom..">
+    <input type="email" id="email" name="email" placeholder="Votre E-Mail..">
+
+    <textarea id="subject" name="subject" placeholder="Ecrivez Votre Message.." style="height:200px"></textarea>
+
+    <input type="submit" value="Envoyer" onclick="sendMail()">
+  </form>
+  <script>
+    function sendMail() {
+      var text = "mailto:innovision.dz@gmail.com?" + "&subject= Contact Site Web" +"&body=Nom : " + yname.value + "%0D%0AE-mail : " + email.value + "%0D%0AMessage : %0D%0A" + subject.value;
+      window.open(text, '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');
+    }
     </script>
+</div>
+<div id="containInfo">
+<div><div style="color: #123f89; font-weight: bold; font-size: large;">Adresse Postale</div>64 Chemin Sidi Yahia, Hydra, Alger</div>
+<div><br><br><div style="color: #123f89; font-weight: bold; font-size: large;">Adresse Mail</div>InnoVision.dz@gmail.com</div>
+<div><br><br><div style="color: #123f89; font-weight: bold; font-size: large;">Numéro de téléphone</div>023-59-57-21</div>
+</div>
+  <img src="Images/contactezNous.png" alt="Contactez nous" class="con">
+</div>
+
+<!-- footer -->
+<div id="footer">
+  <div id=part1>
+    <img src="images/logoBlanc.png" alt="Logo InnoVision" id="logof">
+    <a href="index.html" class="namef">InnoVision</a>
+</div>
+<div id=part2>
+
+  <a href="#contact" style="color: #fefefe; text-align: center; font-size: larger;">Contactez Nous</a>
+</div>
+<div id=part3>
+  <div><img src="images/place.png" id="place">64 Chemin Sidi Yahia, Hydra, Alger</div>
+<div><br><br><img src="images/email.png" id="mail">InnoVision.dz@gmail.com</div>
+<div><br><br><img src="images/tlfn.png" id="tlfn">023-59-57-21</div>
+
+</div>
+
+
+</div>
+<div id=part4>
+  Copyright © 2021 InnoVision. All rights reserved
+  <div id="mask5"></div>
+  <div id="mask6"></div>
+  <div style="bottom: 7px; right: 0px; position: absolute;"><a href="#logo" ><img src="Images/arrow.png" id="arrow"></a></div>
+  </div>
+  
+    	<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.5.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.5.0/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
   </body>
 </html>
