hopefully with css

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <script defer src="/__/firebase/8.5.0/firebase-remote-config.js"></script>
     <script defer src="/__/firebase/8.5.0/firebase-performance.js"></script>
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat' >
     <link rel='icon' href='Images/logoBlancAvecFond.png'>
   </head>
