--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
 <!-- Accueil -->
 <div id="accueil" >
-<img src="images/accueil.png" alt="Accueil" id="acc-img">
+<img src="Images/accueil.png" alt="Accueil" id="acc-img">
 </div>
 
 
@@ -57,29 +57,29 @@
   <img src="Images/nosProjets.png" alt="Nos projets" class="pro">
   <h1>Nos Projets</h1>
   <div class="listProjets">
-      <div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      <div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center; color: #123f89;">Projet 1</span> 
           <br/><br/>date1-date2</div>
       </div>
-      <div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      <div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 2</span> 
           <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 3</span> 
           <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 4</span> 
           <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 5</span> 
           <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 6</span> 
           <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 7</span> 
           <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 8</span> 
           <br/><br/>date1-date2</div>
       </div>
@@ -117,7 +117,7 @@
 <!-- footer -->
 <div id="footer">
   <div id=part1>
-    <img src="images/logoBlanc.png" alt="Logo InnoVision" id="logof">
+    <img src="Images/logoBlanc.png" alt="Logo InnoVision" id="logof">
     <a href="index.html" class="namef">InnoVision</a>
 </div>
 <div id=part2>
@@ -125,9 +125,9 @@
   <a href="#contact" style="color: #fefefe; text-align: center; font-size: larger;">Contactez Nous</a>
 </div>
 <div id=part3>
-  <div><img src="images/place.png" id="place">64 Chemin Sidi Yahia, Hydra, Alger</div>
-<div><br><br><img src="images/email.png" id="mail">InnoVision.dz@gmail.com</div>
-<div><br><br><img src="images/tlfn.png" id="tlfn">023-59-57-21</div>
+  <div><img src="Images/place.png" id="place">64 Chemin Sidi Yahia, Hydra, Alger</div>
+<div><br><br><img src="Images/email.png" id="mail">InnoVision.dz@gmail.com</div>
+<div><br><br><img src="Images/tlfn.png" id="tlfn">023-59-57-21</div>
 
 </div>
 
