--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="HandheldFriendly" content="true">
     <title>InnoVision</title>
@@ -34,7 +34,7 @@
   <div class="links">
   <a href="#about" >A propos</a>
   <a href="#projet" >Nos projets</a>
-  <a href="#contact" >Contactez Nous</a>
+  <a href="#contact" >Contactez Nous </a>
 </div>
 </div>
 
@@ -48,7 +48,7 @@
 <div id="about">
   <div class="talk">
     <h1>Qui sommes <span style="color: #123f89;">Nous</span>?</h1>
-    <p>Bla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablabla</p>
+    <p>Bla blablablab lablablaBla blablabla blablablaBla blablablablablablaBla  blablablab lablablaBla blablablablab lablaBla blablablabla blablaBla blablabla blablablaBla blablablablabla blaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablabl ablablaBla blablablab lablablaBla blablablablablablaBla blablablablablablaBla blablablabla blablaBla blablablabl ablablaBla blablabla blablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablabla blablabl aBla blablabl ablablab laBla blablablablabla blaBla blablablablablab laBla blablablablab lablaBl a blablablabl ablablaBla blablablablabl ablaBla blablablabla blablaBla blablabla blablablaBla blablabla blablabla</p>
   </div>
   <img src="Images/aPropos.png" alt="A propos" class="aPropos">
 </div>
@@ -60,29 +60,18 @@
   <div class="listProjets">
       <div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center; color: #123f89;">Projet 1</span> 
-          <br/><br/>date1-date2</div>
+          <br/><br/>Huawei</div>
       </div>
       <div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 2</span> 
-          <br/><br/>date1-date2</div>
+          <br/><br/>Centre météorologique Algérien</div>
       </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 3</span> 
-          <br/><br/>date1-date2</div>
+          <br/><br/>Société publique SAIDAL</div>
       </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 4</span> 
-          <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 5</span> 
-          <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 6</span> 
-          <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 7</span> 
-          <br/><br/>date1-date2</div>
-      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 8</span> 
-          <br/><br/>date1-date2</div>
+          <br/><br/>Cevital</div>
+      
       </div>
   </div>
 </div>
@@ -100,12 +89,7 @@
 
     <input type="submit" value="Envoyer" onclick="sendMail()">
   </form>
-  <script>
-    function sendMail() {
-      var text = "mailto:innovision.dz@gmail.com?" + "&subject= Contact Site Web" +"&body=Nom : " + yname.value + "%0D%0AE-mail : " + email.value + "%0D%0AMessage : %0D%0A" + subject.value;
-      window.open(text, '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');
-    }
-    </script>
+  
 </div>
 <div id="containInfo">
 <div><div style="color: #123f89; font-weight: bold; font-size: large;">Adresse Postale</div>64 Chemin Sidi Yahia, Hydra, Alger</div>
@@ -141,6 +125,22 @@
   <div style="bottom: 7px; right: 0px; position: absolute;"><a href="#logo" ><img src="Images/arrow.png" id="arrow"></a></div>
   </div>
   
+
+  <script type="text/javascript">
+    let box =document.querySelector('.talk');
+    var height;
+    function sendMail() {
+      var text = "mailto:innovision.dz@gmail.com?" + "&subject= Contact Site Web" +"&body=Nom : " + yname.value +"%0D%0AE-mail : " + email.value + "%0D%0AMessage : %0D%0A" + subject.value;
+      window.open(text, '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');
+    }
+
+      function fixHeight() 
+      {
+    
+  }
+    window.onload = fixHeight;
+  
+    </script>
     	<!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/8.5.0/firebase-app.js"></script>
 
