hopefully final version

--- a/public/index.html
+++ b/public/index.html
@@ -48,8 +48,11 @@
 <div id="about">
   <div class="talk">
     <h1>Qui sommes <span style="color: #123f89;">Nous</span>?</h1>
-    <p>Bla blablablab lablablaBla blablabla blablablaBla blablablablablablaBla  blablablab lablablaBla blablablablab lablaBla blablablabla blablaBla blablabla blablablaBla blablablablabla blaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablablabl ablablaBla blablablab lablablaBla blablablablablablaBla blablablablablablaBla blablablabla blablaBla blablablabl ablablaBla blablabla blablablaBla blablablablablablaBla blablablablablablaBla blablablablablablaBla blablabla blablabl aBla blablabl ablablab laBla blablablablabla blaBla blablablablablab laBla blablablablab lablaBl a blablablabl ablablaBla blablablablabl ablaBla blablablabla blablaBla blablabla blablablaBla blablabla blablabla</p>
-  </div>
+    <p>
+      Une entreprise Algérienne innovante présente sur le marché des nouvelles technologies depuis 2008.<br>
+      Notre objectif principal est d'accompagner nos clients dans la réalisation de leurs projets et de proposer des solutions informatiques de qualité dans une recherche constante de la satisfaction du client.
+
+    </div>
   <img src="Images/aPropos.png" alt="A propos" class="aPropos">
 </div>
 
@@ -58,20 +61,24 @@
   <img src="Images/nosProjets.png" alt="Nos projets" class="pro">
   <h1>Nos Projets</h1>
   <div class="listProjets">
-      <div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      <div style="background-image: url('Images/projet-bg-1.png'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center; color: #123f89;">Projet 1</span> 
-          <br/><br/>Huawei</div>
+          <br/>Huawei
+          </div>
+        <div class="img-descrp">Le projet consiste à développer un système de gestion des flux de navires (entrées/sorties aux quais du port) pour le nouveau port d’El Hamdania-Cherchell.</div>
       </div>
-      <div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
+      <div style="background-image: url('Images/projet-bg-2.png'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 2</span> 
-          <br/><br/>Centre météorologique Algérien</div>
-      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
+          <br/>Centre météorologique Algérien</div>
+          <div class="img-descrp">Le projet consiste à développer un système de prévision météorologique basé sur les techniques de développement avancées et les technologies deep learning.</div>
+      </div><div style="background-image: url('Images/projet-bg-3.png'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 3</span> 
-          <br/><br/>Société publique SAIDAL</div>
-      </div><div style="background-image: url('Images/projet-bg-1.jpg'); background-size: 100% 100%;">
+          <br/>Société publique SAIDAL</div>
+          <div class="img-descrp">Le projet consiste à développer un logiciel de gestion d’approvisionnement des hôpitaux au niveau national.</div>
+      </div><div style="background-image: url('Images/projet-bg-4.png'); background-size: 100% 100%;">
         <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 4</span> 
-          <br/><br/>Cevital</div>
-      
+          <br/>Cevital</div>
+          <div class="img-descrp">Le projet consiste à développer un logiciel pour la gestion interne des différentes taches métiers liées à l’activité de l’entreprise Cevital (RH, Client, gestion de stocks).</div>      
       </div>
   </div>
 </div>
@@ -111,7 +118,7 @@
 </div>
 <div id=part3>
   <div><img src="Images/place.png" id="place">64 Chemin Sidi Yahia, Hydra, Alger</div>
-<div><br><br><img src="Images/email.png" id="mail">InnoVision.dz@gmail.com</div>
+<div><br><br><img src="Images/email.png" id="mail">InnoVision.dz@gmail .com</div>
 <div><br><br><img src="Images/tlfn.png" id="tlfn">023-59-57-21</div>
 
 </div>
