--- a/public/index.html
+++ b/public/index.html
@@ -62,21 +62,21 @@
   <h1>Nos Projets</h1>
   <div class="listProjets">
       <div style="background-image: url('Images/projet-bg-1.png'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center; color: #123f89;">Projet 1</span> 
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center; color: #123f89;">InfoNavire</span> 
           <br/>Huawei
           </div>
         <div class="img-descrp">Le projet consiste à développer un système de gestion des flux de navires (entrées/sorties aux quais du port) pour le nouveau port d’El Hamdania-Cherchell.</div>
       </div>
       <div style="background-image: url('Images/projet-bg-2.png'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 2</span> 
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">MetView</span> 
           <br/>Centre météorologique Algérien</div>
           <div class="img-descrp">Le projet consiste à développer un système de prévision météorologique basé sur les techniques de développement avancées et les technologies deep learning.</div>
       </div><div style="background-image: url('Images/projet-bg-3.png'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 3</span> 
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">PharmaStocks</span> 
           <br/>Société publique SAIDAL</div>
           <div class="img-descrp">Le projet consiste à développer un logiciel de gestion d’approvisionnement des hôpitaux au niveau national.</div>
       </div><div style="background-image: url('Images/projet-bg-4.png'); background-size: 100% 100%;">
-        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Projet 4</span> 
+        <div class="bande"><span style="font-size: 30px; font-weight: bold; text-align: center;color: #123f89;">Synergy </span> 
           <br/>Cevital</div>
           <div class="img-descrp">Le projet consiste à développer un logiciel pour la gestion interne des différentes taches métiers liées à l’activité de l’entreprise Cevital (RH, Client, gestion de stocks).</div>      
       </div>
